blue-green/template/50-50-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green
  namespace: default
spec:
  traffic:
    - revisionName: $BLUE_REVISION_NAME
      percent: 50
    - revisionName: $GREEN_REVISION_NAME
      percent: 50
      tag: v2
